<resources>
    <string name="app_name">OBAJUshop</string>
    <string name="content_text">Define style this season with Armani new range of trendy tops, crafted with intricate details. Create a chic statement look by teaming this lace number with skinny jeans and pumps.</string>
    <string name="content_specs_product_details">White lace top, woven,
     has a round neck, short sleeves, has knitted lining attached</string>
    <string name="content_specs_material">Polyester, Machine wash</string>
    <string name="content_specs_size">Regular fit, The model (height 5,8 and chest 33) is wearing a size S</string>
    <string name="content_prize">Rp. 7.500.000</string>
</resources>